--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <button onclick="snd13.play()" id="button13"> Guy Like This</button>
 <button onclick="snd14.play()" id="button14"> Blue Collar</button>
 <button onclick="snd15.play()" id="button15"> Yeah</button>
-<button onclick="snd16.play()" id="button16"> Auh!</button>
+<button onclick="snd16.play()" id="button16"> Augh!</button>
 <button onclick="snd17.play()" id="button17"> Bruce</button>
 
 </div>
