--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     var snd5 = new Audio("Audio/drink_til_4.wav");
     var snd6 = new Audio("Audio/tuning.wav");
     var snd7 = new Audio("Audio/country.wav");
-    var snd8 = new Audio("Audio/outta_here.wav");
+    var snd8 = new Audio("Audio/Outta_here.wav");
     var snd9 = new Audio("Audio/Squeezin.wav");
     var snd10 = new Audio("Audio/angus.wav");
     var snd11 = new Audio("Audio/frampton.wav");
