--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
     var snd15 = new Audio("Audio/yeah.wav");
     var snd16 = new Audio("Audio/auh.wav");
     var snd17 = new Audio("Audio/bruce.wav");
+    var snd18 = new Audio("Audio/whatthefuck.wav");
 
 
 
@@ -105,6 +106,8 @@
 <button onclick="snd15.play()" id="button15"> Yeah</button>
 <button onclick="snd16.play()" id="button16"> Augh!</button>
 <button onclick="snd17.play()" id="button17"> Bruce</button>
+<button onclick="snd18.play()" id="button17"> What the fuck!</button>
+
 
 </div>
 
